--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Ghost Admin</title>
+    <title>Flbas Blog Admin</title>
 
     {{content-for "head"}}
 
@@ -19,7 +19,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Ghost" />
 
-    <link rel="shortcut icon" href="assets/img/favicon.ico" />
+    <link rel="shortcut icon" href="assets/img/favicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <!-- <link rel="manifest" href="/assets/favicon/site.webmanifest"> -->
+
     <link rel="apple-touch-icon-precomposed" href="assets/img/touch-icon-iphone.png" />
     <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/touch-icon-ipad.png" />
     <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/small.png" />
